--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  min-width: 170px;
 }
 
 .card-list {
@@ -142,7 +143,6 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 100%;
-  /* padding: 11px 11px; */
   left: -500%;
   top: 0%;
   display: flex;
@@ -176,7 +176,6 @@
   display: flex;
   flex-direction: column;
   height: 50%;
-  /* box-sizing: border-box; */
 }
 
 .card__pub-date {
@@ -240,8 +239,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   margin-top: auto;
-
-  /* padding-bottom: 24px; */
 }
 
 @media screen and (max-width: 768px) {
@@ -261,8 +258,9 @@
   }
 
   .card {
-    max-width: 224px;
-    max-height: 420px;
+    max-width: 288px;
+    max-height: 440px;
+    min-width: 170px;
   }
 
   .card__content {
@@ -274,15 +272,16 @@
   }
 
   .card-list {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    padding-left: 5%;
+    padding-right: 5%;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
 
 @media screen and (max-width: 320px) {
-  .card {
-    max-width: 288px;
-  }
-
   .card__title {
     font-size: 22px;
   }
